modules/protocol/http/test/long_header_key-ref.txt
debug http: selecting http dissector on flow
debug tcp-connection: opening connection 127.0.0.1:42077 -> 127.0.0.1:80
info alert: id = <>
	severity = low
	description = Parse error in entity `name` at byte 9021 : pattern /^(?:[^:[:blank:]]+)/ doesn't match against ``
debug tcp-connection: dropping connection 127.0.0.1:42077 -> 127.0.0.1:80
debug tcp-connection: closing connection 127.0.0.1:42077 -> 127.0.0.1:80
